<resources>
    <string name="app_name">ImageListingApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="login_fragment_label">Login Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="enter_e_mail">Enter E-mail</string>
    <string name="login">Login</string>
    <string name="enter_password">Enter password</string>
    <string name="pwd_error">Enter a Password</string>
    <string name="email_error">Enter a Valid E-mail Address</string>
    <string name="retype">Re-enter password</string>
    <string name="e_mail">E-mail</string>
    <string name="save">Save</string>
    <string name="login_success">Login successfully</string>
    <string name="pwd_wrng">Wrong password</string>
    <string name="register">Register</string>
    <string name="login_failure">Login failed,Please check the credentials.</string>
    <string name="no_netwrk">Please check internet connectivity</string>

</resources>